# web-epubreader

./: .gitignore  Cargo.toml  README.md  remakedatabase.sh
database/: Cargo.toml
database/.sqlx/: query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json
database/migrations/: 20230704134921_init.sql
database/src/: assets.rs  folders.rs  lib.rs  library.rs  users.rs
scanner/: Cargo.toml
scanner/src/: epub_proc.rs  epub_sandbox.rs  lib.rs  scanner.rs
server/: Cargo.toml
server/src/: events.rs  kjerne.rs  konfig.rs  main.rs
web/: Cargo.toml
web-ui/: package-lock.json  package.json  vite.config.ts
web-ui/src/: App.vue  main.ts
web-ui/src/assets/: main.css
web-ui/src/components/: BookCard.vue  HamburgerMenu.vue  NavbarMenu.vue  TheBookReader.vue  TheLogin.vue  TheNavigationContainer.vue  TheToaster.vue
web-ui/src/components/settings/: LibraryCard.vue
web-ui/src/router/: index.ts
web-ui/src/stores/: book.ts  hamburger.ts  library.ts  navigations.ts  toast.ts  user.ts
web-ui/src/utils/: requestHelper.ts
web-ui/src/views/: BookView.vue  HomeView.vue  LoginView.vue  NotFoundView.vue  SettingsView.vue  TotalCollectionView.vue
web-ui/src/views/settings/: LibrarySettingsView.vue
web/src/: lib.rs
web/src/endepunkter/: auth.rs  books.rs  hello.rs  images.rs  library.rs  mod.rs
