[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.29.1", features = ["full"] }
once_cell = "1.16.0"
uuid = { version = "1.4.0", features = ["v4"] }
argon2 = "0.5.0"
password-hash = "0.5.0"
rand_core = { version = "0.6", features = ["std"] }
serde = "1.0.166"
utoipa = { version = "3.3.0", features = ["axum_extras"] }
