[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
database = { path = "../database" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
futures = "0.3.28"
uuid = { version = "1.4.0", features = ["v4"] }
zip = "0.6.6"
quick-xml = "0.30.0"
