[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros", "headers"] }
tokio = { version = "1.29.1", features = ["full"] }
hyper = "0.14"
utoipa = { version = "3.3.0", features = ["axum_extras"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
database = { path = "../database" }
serde_json = "1.0.1"
serde = "1.0.166"
headers = "0.3"
scanner = { path = "../scanner" }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tokio-util = "0.7.8"
epub = "2.1.1"
